--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.ybonnel</groupId>
-    <artifactId>devoxx-postgres</artifactId>
+    <artifactId>bdxio-postgres</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -49,8 +49,17 @@
             <artifactId>httpclient</artifactId>
             <version>4.5</version>
         </dependency>
+        <dependency>
+            <groupId>net.code-story</groupId>
+            <artifactId>simplelenium</artifactId>
+            <version>2.1</version>
+        </dependency>
 
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
 
 
     </dependencies>
